--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <!-- 1 更换key -->
 
     <uses-sdk
-        android:minSdkVersion="15"
+        android:minSdkVersion="21"
         android:targetSdkVersion="25" />
 
     <!--<instrumentation-->
@@ -21,6 +21,9 @@
     <!--android:targetPackage="com.ykai.engbot" />-->
     <!--android:targetPackage="com.baidu.speech.recognizerdemo" />-->
     <!-- begin: baidu speech sdk  权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -66,7 +69,6 @@
             android:name="com.baidu.speech.API_KEY"
             android:value="w4TSnsjWfkWGNhfD3FkRGsMB" />
         <!--android:value="rZh0DLQKcqMzYjNSf2mwVByA" />-->
-
 
 
         <meta-data
