--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "com.ykai.engbot"
 //        applicationId "com.baidu.speech.recognizerdemo"
 
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -31,7 +31,7 @@ dependencies {
     //    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile fileTree(exclude: '*.bak', dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:23.+'
     compile files('libs/bdasr_V3_20170801_60da871.jar')
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/aip-java-sdk-3.1.0.jar')
